--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@ body{
     line-height: 1.2;
     background-color: black;
     color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Berkshire Swash', cursive;
+    text-align: center;
 }
 
 header{
@@ -10,7 +11,7 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain, cover;
-    height: 370px;
+    height: 310px;
     width: 100%;
     margin-bottom: 30px;
     
@@ -24,15 +25,19 @@ h1{
 }
 
 h2{
-    font-size: 24pt;
+    font-size: 18pt;
+    font-family: 'Cinzel', serif;
     text-align: center;
-    margin-bottom: 30px;
+    letter-spacing: 1;
     color: white;
+    margin-top: 2px;
 }
 
 .row{
     padding: 20px;
+    height: 350px;
     width: 75%;
+    margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(228, 243, 249);
@@ -40,10 +45,10 @@ h2{
 }
 
 .leftside{
-    padding: 30px;
+    padding: 10px;
     float: left;
     align-content: center;
-    height: 100%;
+    height: auto;
 }
 
 #wordpicTitle{
@@ -59,6 +64,7 @@ h2{
 }
 
 #underScores{
+    font-family: 'Cinzel', serif;
     font-size: 24pt;
     letter-spacing: .5em;
     text-align: center;
@@ -66,15 +72,21 @@ h2{
 }
 
 #lettersRem{
+    font-family: 'Cinzel', serif;
     font-size: 24pt;
-    letter-spacing: .5em;
     text-align: center;
     padding-bottom: 30px;
 }
 
 #lettersGuessed{
+    font-family: 'Cinzel', serif;
     font-size: 24pt;
-    letter-spacing: .5em;
     text-align: center;
     padding-bottom: 30px;
+}
+
+#wins{
+    padding-top: 20px;
+    font-size: 22pt;
+    font-weight: bold;
 }
