--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body{
     line-height: 1.2;
     background-color: black;
@@ -11,9 +15,9 @@ header{
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain, cover;
-    height: 310px;
+    height: 240px;
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     
 }
 
@@ -33,27 +37,48 @@ h2{
     margin-top: 2px;
 }
 
-.row{
-    padding: 20px;
-    height: 350px;
-    width: 75%;
-    margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(228, 243, 249);
-    border: 3px solid rgb(163, 201, 215);
+.container{
+    padding: 40px 110px 40px 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 15px;
+    background-image: url("../images/scroll950x350.png");
+    background-repeat: no-repeat;
+    background-size: 95% 100%;
+    background-position: center;
+}
+
+#row {
+    padding-top: 20px;
+    max-width: 900px;
+    width: 100%;
 }
 
 .leftside{
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
     float: left;
-    align-content: center;
-    height: auto;
+    text-align: center;
+}
+
+.rightside{
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px 10px 10px 10px;
+    float: right;
+    text-align: center;
 }
 
 #wordpicTitle{
-    font-size: 14pt;
+    font-size: 20pt;
     text-align: center;
+    text-transform: capitalize;
 }
 
 .gameTitles{
@@ -66,7 +91,6 @@ h2{
 #underScores{
     font-family: 'Cinzel', serif;
     font-size: 24pt;
-    letter-spacing: .5em;
     text-align: center;
     padding-bottom: 30px;
 }
@@ -80,6 +104,7 @@ h2{
 
 #lettersGuessed{
     font-family: 'Cinzel', serif;
+    height: 26pt;
     font-size: 24pt;
     text-align: center;
     padding-bottom: 30px;
@@ -89,4 +114,25 @@ h2{
     padding-top: 20px;
     font-size: 22pt;
     font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+@media only screen and (max-width: 675px) {
+    .container {
+        padding: 10px;
+    }
+
+    .leftside {
+        display: block;
+        width: 100%;
+    }
+
+    .rightside {
+        position: relative;
+        width: 100%;
+        float: none;
+        padding-bottom: 50px;
+    }
 }
