--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ h2{
     font-size: 20pt;
     text-align: center;
     text-transform: capitalize;
+    color: rgb(97, 15, 15);
 }
 
 .gameTitles{
@@ -93,6 +94,7 @@ h2{
     font-size: 24pt;
     text-align: center;
     padding-bottom: 30px;
+    color: rgb(97, 15, 15);
 }
 
 #lettersRem{
@@ -100,6 +102,7 @@ h2{
     font-size: 24pt;
     text-align: center;
     padding-bottom: 30px;
+    color: rgb(97, 15, 15);
 }
 
 #lettersGuessed{
@@ -108,6 +111,7 @@ h2{
     font-size: 24pt;
     text-align: center;
     padding-bottom: 30px;
+    color: rgb(97, 15, 15);
 }
 
 #wins{
@@ -134,5 +138,13 @@ h2{
         width: 100%;
         float: none;
         padding-bottom: 50px;
+    }
+
+    #wins {
+        padding-bottom: 25px;
+    }
+
+    #row {
+        padding-top: 40px;
     }
 }
