--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,13 @@ h2{
     margin-top: 2px;
 }
 
+h3 {
+    font-family: 'Cinzel', serif;
+    font-size: 24pt;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .container{
     padding: 40px 110px 40px 110px;
     display: flex;
@@ -44,7 +51,6 @@ h2{
     align-items: center;
     flex-direction: row;
     width: 100%;
-    margin-top: 15px;
     background-image: url("../images/scroll950x350.png");
     background-repeat: no-repeat;
     background-size: 95% 100%;
@@ -64,6 +70,10 @@ h2{
     padding: 10px;
     float: left;
     text-align: center;
+}
+
+img {
+    width: 265px;
 }
 
 .rightside{
@@ -121,6 +131,62 @@ h2{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 20% auto; /* 15% from the top and centered */
+    padding: 80px;
+    border: 1px solid #888;
+    font-size: 18pt;
+    font-family: 'Alegreya', serif;
+    line-height: 150%;
+    text-align: center;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#myBtn {
+    color: white;
+    font-family: 'Cinzel', serif;
+    font-size: 14pt;
+    background: none;
+    margin-top: 10px;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 675px) {
