--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,6 @@ h3 {
 }
 
 #row {
-    padding-top: 20px;
     max-width: 900px;
     width: 100%;
 }
@@ -86,10 +85,15 @@ img {
 }
 
 #wordpicTitle{
-    font-size: 20pt;
+    font-size: 22pt;
     text-align: center;
     text-transform: capitalize;
+    margin-top: 5px;
     color: rgb(97, 15, 15);
+}
+
+#houseTitle {
+    font-size: 16pt;
 }
 
 .gameTitles{
@@ -125,7 +129,7 @@ img {
 }
 
 #wins{
-    padding-top: 20px;
+    padding-bottom: 10px;
     font-size: 22pt;
     font-weight: bold;
     margin-left: auto;
@@ -147,6 +151,32 @@ img {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+.modal2 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.0); /* Black w/ opacity */
+}
+
+.modal3 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.0); /* Black w/ opacity */
+}
+
 /* Modal Content/Box */
 .modal-content {
     position: relative;
@@ -161,6 +191,19 @@ img {
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
+.modal-content2 {
+    position: relative;
+    margin: 25% 50%;
+    background-color: #fefefe;
+    padding: 40px;
+    border: 1px solid #888;
+    font-size: 18pt;
+    font-family: 'Alegreya', serif;
+    line-height: 150%;
+    text-align: center;
+    width: 30%; /* Could be more or less, depending on screen size */
+}
+
 /* The Close Button */
 .close {
     color: #aaa;
@@ -171,8 +214,40 @@ img {
     font-weight: bold;
 }
 
+.close2 {
+    color: #aaa;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.close3 {
+    color: #aaa;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 36px;
+    font-weight: bold;
+}
+
 .close:hover,
 .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.close2:hover,
+.close2:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.close3:hover,
+.close3:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
