--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,15 +41,14 @@ h3 {
     font-family: 'Cinzel', serif;
     font-size: 24pt;
     text-align: center;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .container{
     padding: 40px 110px 40px 110px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    flex-direction: row;
     width: 100%;
     background-image: url("../images/scroll950x350.png");
     background-repeat: no-repeat;
@@ -58,16 +57,14 @@ h3 {
 }
 
 #row {
+    display: block;
     max-width: 900px;
     width: 100%;
 }
 
 .leftside{
-    width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
     float: left;
+    width: 50%;
     text-align: center;
 }
 
@@ -76,11 +73,8 @@ img {
 }
 
 .rightside{
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 10px 10px 10px;
     float: right;
+    width: 50%;
     text-align: center;
 }
 
@@ -103,9 +97,17 @@ img {
     padding-bottom: 10px;
 }
 
+.gameTitlesA {
+    margin-top: 10px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 40pt;
+    padding-bottom: 10px;
+}
+
 #underScores{
     font-family: 'Cinzel', serif;
-    font-size: 24pt;
+    font-size: 36pt;
     text-align: center;
     padding-bottom: 30px;
     color: rgb(97, 15, 15);
@@ -177,7 +179,6 @@ img {
     background-color: rgba(0,0,0,0.0); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
 .modal-content {
     position: relative;
     background-color: #fefefe;
@@ -188,23 +189,22 @@ img {
     font-family: 'Alegreya', serif;
     line-height: 150%;
     text-align: center;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%; 
 }
 
 .modal-content2 {
     position: relative;
-    margin: 25% 50%;
+    margin: 20% auto;
     background-color: rgba(250,250,250,1);
-    padding: 40px;
+    padding: 60px 60px 40px 60px;
     border: 1px solid #888;
     font-size: 18pt;
     font-family: 'Alegreya', serif;
     line-height: 150%;
     text-align: center;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 60%; 
 }
 
-/* The Close Button */
 .close {
     color: #aaa;
     position: absolute;
