--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ img {
 
 @media only screen and (max-width: 675px) {
     .container {
-        padding: 10px;
+        padding: 25px 10px;
     }
 
     .leftside {
@@ -287,5 +287,31 @@ img {
 
     #row {
         padding-top: 40px;
+    }
+
+    .gameTitlesA {
+        font-size: 26pt;
+    }
+
+    .gameTitles {
+        font-size: 18pt;
+    }
+
+    #underScores{
+        font-size: 22pt;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .modal-content2 {
+        padding: 10px;
+        width: 80%;
+        margin: 10% auto;
+    }
+
+    h3 {
+        font-size: 22pt;
     }
 }
