--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,18 @@
     box-sizing: border-box;
 }
 
-body{
+body, html{
     line-height: 1.2;
     background-color: black;
     color: black;
+    height: 100%;
     font-family: 'Berkshire Swash', cursive;
     text-align: center;
-    background-image: url("../images/3eyedraven.png");
+    background-image: url("../images/3eyedraven_cropped.png");
     background-repeat: no-repeat;
-    background-position-y: 725px;
-    background-size: 100%;
+    background-position-y: bottom;
+    background-position-x: center;
+    background-size: contain;
 }
 
 header{
