--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@ h3 {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    max-width: 1500px;
+    margin: auto;
     background-image: url("../images/scroll950x350.png");
     background-repeat: no-repeat;
     background-size: 95% 100%;
